--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="description">Passionate about creating innovative solutions and building scalable applications
                 </p>
                 <div class="cta-buttons">
-                    <a href="/static/Resume/Vivek_Yadav_Resume.pdf" class="btn primary" target="_blank">
+                    <a href="static/Resume/Vivek_Yadav_Resume.pdf" class="btn primary" target="_blank">
                         <i class="fas fa-download"></i>
                         Download Resume
                     </a>
@@ -265,7 +265,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/static/Images/pulsePoint.png" alt="PulsePoint - Hospital Management System"
+                    <img src="static/Images/pulsePoint.png" alt="PulsePoint - Hospital Management System"
                         loading="lazy">
                     <a href="https://github.com/vivek1833/PulsePoint" class="project-github" target="_blank"
                         aria-label="View on GitHub">
@@ -295,7 +295,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/static/Images/photogram.png" alt="Photogram - Social Media Platform" loading="lazy">
+                    <img src="static/Images/photogram.png" alt="Photogram - Social Media Platform" loading="lazy">
                     <a href="https://github.com/vivek1833/Social-media" class="project-github" target="_blank"
                         aria-label="View on GitHub">
                         <i class="fab fa-github"></i>
@@ -321,7 +321,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/static/Images/chatBook.png" alt="ChatBook - Chat Application" loading="lazy">
+                    <img src="static/Images/chatBook.png" alt="ChatBook - Chat Application" loading="lazy">
                     <a href="https://github.com/vivek1833/ChatBook" class="project-github" target="_blank"
                         aria-label="View on GitHub">
                         <i class="fab fa-github"></i>
