--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             alt="PulsePoint - Hospital Management System">
                         <div class="card-body p-4">
                             <div class="d-flex justify-content-between align-items-start mb-3">
-                                <h3 class="h5 mb-0">PulsePoint – Hospital Management System</h3>
+                                <h3 class="h5 mb-0">PulsePoint - Hospital Management System</h3>
                                 <a href="https://github.com/vivek1833/PulsePoint" class="btn btn-sm btn-outline-dark"
                                     target="_blank">
                                     <i class="fab fa-github"></i>
@@ -372,7 +372,7 @@
                             alt="Photogram - Social Media Platform">
                         <div class="card-body p-4">
                             <div class="d-flex justify-content-between align-items-start mb-3">
-                                <h3 class="h5 mb-0">Photogram – Social Media Platform</h3>
+                                <h3 class="h5 mb-0">Photogram - Social Media Platform</h3>
                                 <a href="https://github.com/vivek1833/Social-media" class="btn btn-sm btn-outline-dark"
                                     target="_blank">
                                     <i class="fab fa-github"></i>
@@ -409,14 +409,92 @@
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2 mb-2">Firebase</span>
                                 <span class="badge bg-primary me-2 mb-2">React.js</span>
-                                <span class="badge bg-primary me-2 mb-2">Bootstrap</span>
+                                <span class="badge bg-primary me-2 mb-2">React Bootstrap</span>
                             </div>
                             <ul class="list-unstyled">
-                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Google Authentication
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Google Authentication and Login
                                 </li>
                                 <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Real-time chat with
                                     multiple users</li>
                                 <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Search users</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0">
+                        <img src="static/Images/dailyReminder.png" class="card-img-top" alt="ChatBook - Chat Application">
+                        <div class="card-body p-4">
+                            <div class="d-flex justify-content-between align-items-start mb-3">
+                                <h3 class="h5 mb-0">Task Reminder - Chrome Extension</h3>
+                                <a href="https://github.com/vivek1833/Daily-Reminder" class="btn btn-sm btn-outline-dark"
+                                    target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                            <div class="mb-3">
+                                <span class="badge bg-primary me-2 mb-2">HTML</span>
+                                <span class="badge bg-primary me-2 mb-2">CSS</span>
+                                <span class="badge bg-primary me-2 mb-2">JavaScipt</span>
+                            </div>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Add, complete, and delete daily tasks
+                                </li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Tasks automatically reset at midnight</li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Sends notifications every hour if a task is not completed</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0">
+                        <img src="static/Images/lms.png" class="card-img-top" alt="ChatBook - Chat Application">
+                        <div class="card-body p-4">
+                            <div class="d-flex justify-content-between align-items-start mb-3">
+                                <h3 class="h5 mb-0">LMS - Learing Management System WebApp</h3>
+                                <a href="https://github.com/vivek1833/LMS" class="btn btn-sm btn-outline-dark"
+                                    target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                            <div class="mb-3">
+                                <span class="badge bg-primary me-2 mb-2">Node.js</span>
+                                <span class="badge bg-primary me-2 mb-2">Handlebars</span>
+                                <span class="badge bg-primary me-2 mb-2">Mongoose</span>
+                                <span class="badge bg-primary me-2 mb-2">JWT</span>
+                            </div>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Student Login and Registration </li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Subjects displayed based on selected course.</li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>CRUD on courses and subjects</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0">
+                        <img src="static/Images/crispyKing.png" class="card-img-top" alt="ChatBook - Chat Application">
+                        <div class="card-body p-4">
+                            <div class="d-flex justify-content-between align-items-start mb-3">
+                                <h3 class="h5 mb-0">Crispy King - Online Food Ordering WebApp</h3>
+                                <a href="https://github.com/vivek1833/Crispy-King" class="btn btn-sm btn-outline-dark"
+                                    target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                            <div class="mb-3">
+                                <span class="badge bg-primary me-2 mb-2">Node.js</span>
+                                <span class="badge bg-primary me-2 mb-2">Handlebars</span>
+                                <span class="badge bg-primary me-2 mb-2">Mongoose</span>
+                                <span class="badge bg-primary me-2 mb-2">Cookie-Parser</span>
+                            </div>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Add and remove items from cart</li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i> User Authentication using cookies</li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i> CRUD operations on food items </li>
                             </ul>
                         </div>
                     </div>
