--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
                                 </div>
                                 <div class="text-center">
                                     <i class="fas fa-code-fork fa-2x mb-2 text-primary"></i>
-                                    <p class="mb-0">Postman</p>
+                                    <p class="mb-0">Docker</p>
                                 </div>
                                 <div class="text-center">
-                                    <i class="fas fa-laptop-code fa-2x mb-2 text-primary"></i>
+                                    <i class="fas fa-docker fa-2x mb-2 text-primary"></i>
                                     <p class="mb-0">VS Code</p>
                                 </div>
                                 <div class="text-center">
@@ -348,8 +348,8 @@
                                 <span class="badge bg-primary me-2 mb-2">Spring Boot</span>
                                 <span class="badge bg-primary me-2 mb-2">React.js</span>
                                 <span class="badge bg-primary me-2 mb-2">PostgreSQL</span>
-                                <span class="badge bg-primary me-2 mb-2">JWT</span>
-                                <span class="badge bg-primary me-2 mb-2">REST APIs</span>
+                                <span class="badge bg-primary me-2 mb-2">Redis</span>
+                                <span class="badge bg-primary me-2 mb-2">Docker</span>
                                 <span class="badge bg-primary me-2 mb-2">Bcrypt</span>
                             </div>
                             <ul class="list-unstyled">
@@ -357,8 +357,7 @@
                                     email generation</li>
                                 <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Password hashing and JWT
                                     token generation</li>
-                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>CRUD operations on
-                                    patients</li>
+                                <li class="mb-2"><i class="fas fa-check text-success me-2"></i>OTP based registration using Redis</li>
                                 <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Sorting and Pagination
                                 </li>
                             </ul>
